Change semantic order of name and picture

--- a/src/ilw-profile-list.styles.css
+++ b/src/ilw-profile-list.styles.css
@@ -14,19 +14,23 @@
 
 .image {
     grid-row: 1 / span 5;
+    grid-column: 1;
 }
 
 .name {
     grid-row: 2;
+    grid-column: 2;
 }
 
 .subtitle {
     grid-row: 3;
+    grid-column: 2;
     padding-top: 3px;
 }
 
 .main {
     grid-row: 4;
+    grid-column: 2;
 }
 
 ::slotted(*) {
